--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,18 @@
 # Core dependencies
 torch>=2.0.0
-transformers>=4.34.0
-accelerate>=0.21.0
-optimum>=1.12.0
-optimum-intel>=1.11.0
-bitsandbytes>=0.40.0
+transformers>=4.30.0
 numpy>=1.24.0
-scipy>=1.10.0
-tqdm>=4.65.0
-
-# GPTQ dependencies
-auto-gptq>=0.4.2
-optimum-intel>=1.8.1
-
-# GGUF dependencies
-ctransformers>=0.2.24
-
-# AWQ dependencies
-autoawq>=0.1.5
-
-# Evaluation
-datasets>=2.14.0
-evaluate>=0.4.0
-human-eval>=1.0.0
-
-# Visualization
 matplotlib>=3.7.0
-pandas>=2.0.0
-seaborn>=0.12.2
+seaborn>=0.12.0
+psutil>=5.9.0
+tqdm>=4.65.0
+accelerate>=0.20.0
+safetensors>=0.3.0
+protobuf>=3.20.0
+jsonlines>=3.0.0
 
 # Utilities
-pyyaml>=6.0
-huggingface-hub>=0.16.4
-safetensors>=0.3.1
-jupyter>=1.0.0
-ipywidgets>=8.0.6
-psutil>=5.9.0
-scikit-learn>=1.0.0
-sentencepiece>=0.1.99
-einops>=0.6.1
-tiktoken>=0.4.0
-typing-extensions>=4.5.0
-peft>=0.5.0 
+pydantic>=1.10.5
+typer>=0.7.0
+rich>=13.0.0
+tabulate>=0.9.0 
